# causal_ai

./: .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/: copilot-instructions.md
tutorials/: datacamp_tutorial.py  modeling_example.py
