[project]
name = "causal_ai"
version = "0.1.0"
description = "Playground for causal inference methods in data science"
authors = [
    { name = "Javier Pardo" }
]
dependencies = [
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "dowhy>=0.10",
    "statsmodels>=0.14.0",
]
requires-python = ">=3.9"


[tool.rye]
managed = true
dev-dependencies = [
    "ruff>=0.1.0",
    "pre-commit>=3.5.0",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.ruff]
target-version = "py39"
line-length = 88
fix = true
unsafe-fixes = false

# Enable flake8-bugbear (`B`) and more
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"